# osbdm_hpm5301_software

./: .clang-format  CMakeLists.txt  README.md  format_all.bat
app/: winusb20.c
application/include/: usb_config.h  usb_osbdm.h
application/source/: main.c  usb_osbdm.c
board/include/: board_custom.h
board/source/: board_custom.c
config/: usb_config.h
middleware/easylogger/port/: elog_port.c
osbdm/: MCU.c  MCU.h  MCU_Embedded_Modelo.c  Start08.c  USB_CDC.c  USB_CDC.h  USB_User_API.c  USB_User_API.h  bdm_9RS08.c  bdm_9RS08.h  bdm_9RS08_bgnd_driver.c  bdm_9S08.c  bdm_9S08.h  bdm_9S12.c  bdm_9S12.h  bdm_9s12z.c  bdm_9s12z.h  bdm_bgnd_driver.c  bdm_bgnd_driver.h  bdm_cf.c  bdm_cf.h  bdm_cfv1.c  bdm_cfv1.h  board_id.c  board_id.h  cmd_processing.c  cmd_processing.h  derivative.h  dummy_bdm_driver.c  jtag_dsc.c  jtag_dsc.h  jtag_eppc.c  jtag_eppc.h  jtag_io.h  jtag_jm60.c  jtag_jm60.h  jtag_kinetis.c  jtag_kinetis.h  main.c  serial_io.c  (+8 more)
osbdm/Usb_Drv/: Usb_Bdt.h  Usb_Config.h  Usb_Descriptor.c  Usb_Descriptor.h  Usb_Drv.c  Usb_Drv.h  Usb_Ep0_Handler.c  Usb_Ep0_Handler.h
osbdm/common/: commands.h  osbdm_configparam.h  osbdm_memtype.h
project_vscode/: osbdm.code-workspace
